IDE key control added to launch configuration server tab.

--- a/plugins/com.aptana.php.debug.epl/pdt/org2/eclipse/php/internal/debug/ui/launching/server/PHPServerUIMessages.properties
+++ b/plugins/com.aptana.php.debug.epl/pdt/org2/eclipse/php/internal/debug/ui/launching/server/PHPServerUIMessages.properties
@@ -11,7 +11,7 @@ ServerEditDialog.editServer=Edit Server
 ServerCompositeFragment.nameLabel=Na&me:
 ServerTab.url=URL
 ServerTab.appendProjectName=Append Project Name
-ServerTab.autoGenerate=Auto Generate
+ServerTab.autoGenerate=Autogenerate
 ServerTab.urlLabel=URL: 
 ServerTab.server=Server
 ServerTab.new=New
@@ -40,3 +40,7 @@ DefaultDebugServerConnectionTest_theURLCouldNotBeFound=The file ''{0}/dummy.php'
 DefaultDebugServerConnectionTest_testingConnectivity=Testing Connectivity...
 DefaultDebugServerConnectionTest_testDebugServer=Test Debug Server
 DefaultDebugServerConnectionTest_webServerConnectionFailed=Web Server connection failed. Please verify that the address ''{0}''\npoints to your server location.
+ServerTab.IDEKeyGroupLabel=IDE Key
+ServerTab.IDEKeyButtonLabel=Autogenerate at launch
+ServerTab.IDEKeyValueLabel=IDE Key:
+ServerTab.IDEKeyInvalidMessage=IDE Key cannot be empty.
